fix: Aligned items on mobile

--- a/assets/scss/filter-list.scss
+++ b/assets/scss/filter-list.scss
@@ -1,8 +1,14 @@
 .filter-list{
+  &_block {
+    display: flex;
+    align-items: baseline;
+    margin-bottom: 20px;
+  }
+
   &__back {
-    position: relative;
+    // position: relative;
     margin-right: 20px;
-    top: 10px;
+    // top: 10px;
     cursor: pointer;
   }
 
@@ -13,7 +19,7 @@
     font-size: 36px;
     line-height: 43px;
     color: #F1F1F1;
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
   }
 
   .button {
