--- a/assets/scss/photo-slider-modal.scss
+++ b/assets/scss/photo-slider-modal.scss
@@ -107,6 +107,7 @@
 
     &-item {
       width: 450.04px;
+      padding: 0 20px;
       height: 100%;
       margin: 0 auto;
       border-radius: 22px;
